# programmable-kv

./: .gitignore  CITATION.cff  FINDINGS_E1_E2.md  FINDINGS_EXTENSIONS.md  PAPER_detailed.md  README.md  editable-kv-research-plan.md  requirements.txt
docs/: EXPLAINER.md  MECHANISM.md
e1/: README.md  plot_e1.py
e2/: README.md  plot_selection.py  run_e2.py  taubench_ctx.py
editkv/: README.md  __init__.py  core.py  diagnostics.py  example.py  pyproject.toml
esys/: README.md  ablation_thinking.py  arch_erratum.py  baseline_table.py  circ_direction.py  circ_heads.py  circ_scrub.py  circuit_common.py  composable_facts.py  composable_kv.py  composable_vision_shift.py  compose_edit.py  cost_frontier.py  diagnostic_eval.py  diverse_tasks.py  editkv_agent_rigorous.py  editkv_horizon.py  erratum_arch_strength.py  erratum_test.py  make_composable_figures.py  make_scorecards.py  mech_attention.py  mech_causal_patch.py  mech_oracle_control.py  mech_suite.py  mechd_specificity.py  mla_behavioral.py  multisample.py  multisample_fast.py  plot_frontier.py  selective_K_sweep.py  selective_reasoning.py  selective_sweep.py  selective_tokens.py  sparse_refresh_probe.py  surgical_suffices.py  tau2_agent_loop.py  tau2_composable.py  tau2_editkv.py  tau2_episode.py  (+5 more)
figures/: README.md
mem/: PREREG.md  README.md  app.py  data.py  make_figs.py  run_e2.py  run_e2_all.sh  run_e3.py  run_e5.py  run_e5redo.sh  run_final.sh  run_large.sh  run_locomo_full.sh  run_more.sh  run_rest.sh  run_retry.sh  stats.py  (+2 more)
patchkv/editkv/: README.md  core.py  diagnostics.py  pyproject.toml  test_editkv.py
(+571 files in other folders)
